--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1896,8 +1896,6 @@ payload:
   - '+.1ke.net'
   - '+.1kejian.com'
   - '+.1kg.org'
-  - '+.1kj.com'
-  - '+.1kj.tv'
   - '+.1kkk.com'
   - '+.1kmxc.com'
   - '+.1ksz.com'
@@ -2182,6 +2180,7 @@ payload:
   - '+.22145.com'
   - '+.2217.com'
   - '+.221700.com'
+  - '+.2218j.com'
   - '+.222.com'
   - '+.222255268.com'
   - '+.222bz.com'
@@ -3763,7 +3762,6 @@ payload:
   - '+.51.la'
   - '+.51.net'
   - '+.5100.net'
-  - '+.51008.com'
   - '+.510560.com'
   - '+.510ka.com'
   - '+.510yh.cc'
@@ -4300,7 +4298,6 @@ payload:
   - '+.51xbl.com'
   - '+.51xbx.com'
   - '+.51xcrc.com'
-  - '+.51xgjd.com'
   - '+.51xiancheng.com'
   - '+.51xianwan.com'
   - '+.51xiaohua.com'
@@ -10834,6 +10831,7 @@ payload:
   - '+.bgteach.com'
   - '+.bguai.com'
   - '+.bgwl.net'
+  - '+.bgxlre.com'
   - '+.bgyfhyx.com'
   - '+.bgyjr.com'
   - '+.bh.sb'
@@ -11568,7 +11566,6 @@ payload:
   - '+.bjzs114.com'
   - '+.bjzwzx.com'
   - '+.bjzxcp.com'
-  - '+.bjzycd.com'
   - '+.bjzyrxgs.com'
   - '+.bk41.net'
   - '+.bk5u.com'
@@ -12771,6 +12768,7 @@ payload:
   - '+.caomeishuma.com'
   - '+.caomeixz10.xyz'
   - '+.caomin5168.com'
+  - '+.caoniang.com'
   - '+.caotama.com'
   - '+.caoxianfc.com'
   - '+.caoxie.com'
@@ -15361,7 +15359,6 @@ payload:
   - '+.cl2009.com'
   - '+.cl3000.com'
   - '+.cl597.com'
-  - '+.clabso.com'
   - '+.clady.cc'
   - '+.claiks.com'
   - '+.clanzx.net'
@@ -16363,7 +16360,6 @@ payload:
   - '+.cokemine.com'
   - '+.cokll.com'
   - '+.cokutau.com'
-  - '+.col.ink'
   - '+.coladrive.com'
   - '+.colafile.com'
   - '+.colahotpot.com'
@@ -18538,6 +18534,7 @@ payload:
   - '+.dhrcbank.com'
   - '+.dhrest.com'
   - '+.dht5867.com'
+  - '+.dhucf.com'
   - '+.dhwooden.com'
   - '+.dhygw20.com'
   - '+.dhygw2999.com'
@@ -18960,6 +18957,7 @@ payload:
   - '+.djw51.com'
   - '+.djwcp.com'
   - '+.djwxw.com'
+  - '+.djxfar6.com'
   - '+.djyde.com'
   - '+.djye.com'
   - '+.djyjob.com'
@@ -22990,6 +22988,7 @@ payload:
   - '+.fsyule.net'
   - '+.ft12.com'
   - '+.ft22.com'
+  - '+.ft3e.com'
   - '+.ftaro.com'
   - '+.ftbj.net'
   - '+.ftcauction.com'
@@ -23967,13 +23966,13 @@ payload:
   - '+.gezhixq.net'
   - '+.gezida.com'
   - '+.gezila.com'
+  - '+.gezkdx7.com'
   - '+.gf-funds.com'
   - '+.gf.cc'
   - '+.gf521.com'
   - '+.gfan.com'
   - '+.gfanstore.com'
   - '+.gfbhgz.com'
-  - '+.gfcdn.shop'
   - '+.gfcdn.xyz'
   - '+.gfcname.com'
   - '+.gfcvisa.com'
@@ -26391,7 +26390,6 @@ payload:
   - '+.hbshls.com'
   - '+.hbsia.org'
   - '+.hbskw.com'
-  - '+.hbslncy.com'
   - '+.hbslndx.com'
   - '+.hbsmservice.com'
   - '+.hbsmw.com'
@@ -28052,7 +28050,6 @@ payload:
   - '+.htmlsucai.com'
   - '+.htnice.com'
   - '+.htqyy.com'
-  - '+.htr-mold.com'
   - '+.htranslate.com'
   - '+.htsc.com'
   - '+.htsec.com'
@@ -31530,7 +31527,6 @@ payload:
   - '+.jenglishj.com'
   - '+.jeongen.com'
   - '+.jeoshi.com'
-  - '+.jerehedu.com'
   - '+.jerei.com'
   - '+.jerryzou.com'
   - '+.jescard.com'
@@ -34199,7 +34195,6 @@ payload:
   - '+.kezhaozhao.com'
   - '+.kezool.com'
   - '+.kf.ai'
-  - '+.kf25.com'
   - '+.kf3msfm.com'
   - '+.kf4137.com'
   - '+.kf5.com'
@@ -34303,7 +34298,6 @@ payload:
   - '+.kingkaid.com'
   - '+.kingland119.com'
   - '+.kinglandtech.net'
-  - '+.kinglassquartz.com'
   - '+.kingnare.com'
   - '+.kingnet.com'
   - '+.kingnetdc.com'
@@ -35281,7 +35275,6 @@ payload:
   - '+.lan-lin.com'
   - '+.lan1001.com'
   - '+.lanbts.com'
-  - '+.lanbu.net'
   - '+.lancdn.com'
   - '+.lancn.net'
   - '+.lanconvey.com'
@@ -35865,7 +35858,6 @@ payload:
   - '+.leocode.net'
   - '+.leonblog.net'
   - '+.leonshadow.com'
-  - '+.leosirius.fun'
   - '+.leozwang.com'
   - '+.lepaiok.com'
   - '+.lepaowang.com'
@@ -41247,7 +41239,6 @@ payload:
   - '+.nlypx.com'
   - '+.nlzpy.com'
   - '+.nm8yx.com'
-  - '+.nmbgjx.com'
   - '+.nmet168.com'
   - '+.nmgd.com'
   - '+.nmgfood.net'
@@ -42163,7 +42154,6 @@ payload:
   - '+.oritive.com'
   - '+.orleto.com'
   - '+.ornglad.com'
-  - '+.orpheus.ink'
   - '+.orsoon.com'
   - '+.orspr.com'
   - '+.orsun.cc'
@@ -43845,6 +43835,7 @@ payload:
   - '+.pv265.com'
   - '+.pv4b.com'
   - '+.pvc123.com'
+  - '+.pvhgws7.com'
   - '+.pvkj.com'
   - '+.pvmama.com'
   - '+.pvpin.com'
@@ -45104,7 +45095,6 @@ payload:
   - '+.qtlglb.info'
   - '+.qtlgslbcn.info'
   - '+.qtluyuan.com'
-  - '+.qtlxjy.com'
   - '+.qtmojo.com'
   - '+.qtonghua.com'
   - '+.qtrun.com'
@@ -45238,6 +45228,7 @@ payload:
   - '+.quickapi.net'
   - '+.quickbass.com'
   - '+.quickcan.com'
+  - '+.quickcep.com'
   - '+.quickddns.com'
   - '+.quickjoy.com'
   - '+.quicksdk.com'
@@ -46294,7 +46285,6 @@ payload:
   - '+.ruancan.com'
   - '+.ruandy.com'
   - '+.ruanfujia.com'
-  - '+.ruanhaiqin.com'
   - '+.ruanjiandown.com'
   - '+.ruanjianwuxian.com'
   - '+.ruankao.com'
@@ -46505,7 +46495,6 @@ payload:
   - '+.sa20.com'
   - '+.saasddos.com'
   - '+.saasruanjian.com'
-  - '+.saasv.com'
   - '+.saaswaf.com'
   - '+.saayaa.com'
   - '+.sablog.net'
@@ -48867,6 +48856,7 @@ payload:
   - '+.sjcomic.com'
   - '+.sjdzp.com'
   - '+.sjdzp.net'
+  - '+.sjebh.com'
   - '+.sjetdz.com'
   - '+.sjf029.com'
   - '+.sjfcdn.com'
@@ -48961,7 +48951,6 @@ payload:
   - '+.skomart.com'
   - '+.skongmx.com'
   - '+.skrshop.tech'
-  - '+.sks7.com'
   - '+.sksdwl.com'
   - '+.skusoft.com'
   - '+.skwo.net'
@@ -49402,6 +49391,7 @@ payload:
   - '+.somecoding.com'
   - '+.someet.cc'
   - '+.someibo.com'
+  - '+.someonegao.com'
   - '+.somepen.com'
   - '+.something8.com'
   - '+.sometracking.com'
@@ -50076,6 +50066,7 @@ payload:
   - '+.sudaizhijia.com'
   - '+.sudaoa.com'
   - '+.sudaqq.com'
+  - '+.suddenfix.com'
   - '+.sudidc.com'
   - '+.sudu-67ph.com'
   - '+.sudu-72ub.com'
@@ -51950,7 +51941,6 @@ payload:
   - '+.tianzhao.net'
   - '+.tianzhuo.com'
   - '+.tianzhuobj.com'
-  - '+.tianzikj.com'
   - '+.tianziweb.net'
   - '+.tianziyu.com'
   - '+.tianzongyouxi.com'
@@ -52861,7 +52851,6 @@ payload:
   - '+.tt65.org'
   - '+.tt83.xyz'
   - '+.tt96596.com'
-  - '+.tt98.com'
   - '+.ttaidu.com'
   - '+.ttbba.com'
   - '+.ttbbss.com'
@@ -55630,8 +55619,6 @@ payload:
   - '+.weihz.net'
   - '+.weijifan.com'
   - '+.weijinsuo.com'
-  - '+.weijinzhuanbb.com'
-  - '+.weijinzhuancc.com'
   - '+.weijiu.org'
   - '+.weijiuxin.com'
   - '+.weijj.com'
@@ -57141,7 +57128,6 @@ payload:
   - '+.wshttpdns.com'
   - '+.wsisp.com'
   - '+.wsisp.net'
-  - '+.wsj186.com'
   - '+.wsjx.net'
   - '+.wslcode.com'
   - '+.wslmf.com'
@@ -57675,6 +57661,7 @@ payload:
   - '+.x3cn.com'
   - '+.x431.com'
   - '+.x5dj.com'
+  - '+.x64go.com'
   - '+.x64pro.com'
   - '+.x6d.com'
   - '+.x6kj.com'
@@ -57799,6 +57786,7 @@ payload:
   - '+.xbiquge.cc'
   - '+.xbiquge.com'
   - '+.xbiquge.la'
+  - '+.xbiquge.so'
   - '+.xbiquge6.com'
   - '+.xbiqugew.com'
   - '+.xbiqukan.com'
@@ -57981,6 +57969,7 @@ payload:
   - '+.xetimes.com'
   - '+.xetsg.com'
   - '+.xevd.co'
+  - '+.xevddy.com'
   - '+.xeylon.com'
   - '+.xf-world.org'
   - '+.xf-yun.com'
@@ -58323,6 +58312,7 @@ payload:
   - '+.xiaodianweb.com'
   - '+.xiaodigu.com'
   - '+.xiaodigufz.com'
+  - '+.xiaodongrui.com'
   - '+.xiaodoubi.com'
   - '+.xiaodoushebao.com'
   - '+.xiaodouzhuan.net'
