--- a/directbak.yaml
+++ b/directbak.yaml
@@ -40,7 +40,6 @@ payload:
   - '+.007qu.com'
   - '+.007shoes.com'
   - '+.007swz.com'
-  - '+.007yx.com'
   - '+.008008789.com'
   - '+.00817.com'
   - '+.0082tv.com'
@@ -846,6 +845,7 @@ payload:
   - '+.1020m.com'
   - '+.1024.com'
   - '+.1024.ink'
+  - '+.1024dmg.com'
   - '+.1024g.com'
   - '+.1024ie.com'
   - '+.1024nic.com'
@@ -1427,7 +1427,6 @@ payload:
   - '+.1688la.com'
   - '+.1688na.com'
   - '+.1688s.com'
-  - '+.1688yinhua.com'
   - '+.1688zhuce.com'
   - '+.16899168.com'
   - '+.168cb.com'
@@ -1922,6 +1921,7 @@ payload:
   - '+.1mishu.com'
   - '+.1mit.com'
   - '+.1mm8.com'
+  - '+.1mmed.com'
   - '+.1mod.org'
   - '+.1more.com'
   - '+.1mpi.com'
@@ -5237,7 +5237,6 @@ payload:
   - '+.5yi.com'
   - '+.5ykj.com'
   - '+.5youchou.com'
-  - '+.5yun.org'
   - '+.5zai.com'
   - '+.5zg.com'
   - '+.5zzu.com'
@@ -6249,6 +6248,7 @@ payload:
   - '+.853lab.com'
   - '+.8558.org'
   - '+.85679999.com'
+  - '+.857yzf.com'
   - '+.85814.com'
   - '+.85878078.com'
   - '+.858game.com'
@@ -7283,7 +7283,6 @@ payload:
   - '+.9idudu.com'
   - '+.9igcw.com'
   - '+.9ihb.com'
-  - '+.9ihere.com'
   - '+.9ihome.com'
   - '+.9ilu.com'
   - '+.9imobi.com'
@@ -8129,7 +8128,6 @@ payload:
   - '+.ainiseo.com'
   - '+.ainiu.net'
   - '+.ainyi.com'
-  - '+.aiodt.com'
   - '+.aipai.com'
   - '+.aipark.com'
   - '+.aipear.com'
@@ -8423,7 +8421,6 @@ payload:
   - '+.alidayu.com'
   - '+.alidns.com'
   - '+.aliedge.com'
-  - '+.alienfans.net'
   - '+.aliensidea.com'
   - '+.alientek.com'
   - '+.aliexpress-media.com'
@@ -8879,7 +8876,6 @@ payload:
   - '+.antpool.com'
   - '+.antriver.com'
   - '+.antrol.com'
-  - '+.antrtb.com'
   - '+.antsdaq.com'
   - '+.antspainter.org'
   - '+.antuan.com'
@@ -10402,7 +10398,6 @@ payload:
   - '+.bbytpjm.com'
   - '+.bbzhh.com'
   - '+.bbzhi.com'
-  - '+.bc12345678.com'
   - '+.bcactc.com'
   - '+.bcadx.com'
   - '+.bcb5.com'
@@ -11713,7 +11708,6 @@ payload:
   - '+.bmobpay.com'
   - '+.bmp.ovh'
   - '+.bmpj.net'
-  - '+.bmqb.com'
   - '+.bmqy.net'
   - '+.bmrtech.com'
   - '+.bmshow.com'
@@ -11872,7 +11866,6 @@ payload:
   - '+.bookersea.com'
   - '+.booking001.com'
   - '+.bookinlife.net'
-  - '+.bookresource.net'
   - '+.books51.com'
   - '+.bookschina.com'
   - '+.bookshadow.com'
@@ -13818,7 +13811,6 @@ payload:
   - '+.chaov.com'
   - '+.chaoxin.com'
   - '+.chaoxing.com'
-  - '+.chaoxz.com'
   - '+.chaoyindj.com'
   - '+.chaoyisy.com'
   - '+.chaoyuelm.com'
@@ -14254,6 +14246,7 @@ payload:
   - '+.chinaairer.com'
   - '+.chinaalex.com'
   - '+.chinaamc.com'
+  - '+.chinaamo.com'
   - '+.chinaamuse.com'
   - '+.chinaanonymous.com'
   - '+.chinaar.com'
@@ -17518,8 +17511,6 @@ payload:
   - '+.dabaicai.org'
   - '+.dabaicai.shop'
   - '+.dabangm.com'
-  - '+.dabangp.com'
-  - '+.dabangq.com'
   - '+.dabao123.com'
   - '+.dabaoku.com'
   - '+.dabieshu.com'
@@ -18650,7 +18641,6 @@ payload:
   - '+.dianyongqi.com'
   - '+.dianyuan.com'
   - '+.dianyuanic.net'
-  - '+.dianyuesh.com'
   - '+.dianzhanggui.net'
   - '+.dianzhangzhipin.com'
   - '+.dianzheli.com'
@@ -18906,6 +18896,7 @@ payload:
   - '+.diyiziti.com'
   - '+.diyju.com'
   - '+.diymianmo.com'
+  - '+.diymysite.com'
   - '+.diynova.com'
   - '+.diypda.com'
   - '+.diyring.cc'
@@ -19757,7 +19748,6 @@ payload:
   - '+.dubyc.com'
   - '+.duchang.org'
   - '+.dudong.com'
-  - '+.duduaa.com'
   - '+.dudubashi.com'
   - '+.dududu.la'
   - '+.dudumeijia.com'
@@ -20375,6 +20365,7 @@ payload:
   - '+.ebanma.com'
   - '+.ebanshu.net'
   - '+.ebaoquan.org'
+  - '+.ebaotech.com'
   - '+.ebasset.com'
   - '+.ebchina.com'
   - '+.ebchinatech.com'
@@ -21004,7 +20995,6 @@ payload:
   - '+.enguo.com'
   - '+.engz.net'
   - '+.enicn.com'
-  - '+.enjoenjoenjo111.xyz'
   - '+.enjoy.link'
   - '+.enjoy1992.com'
   - '+.enjoy3c.com'
@@ -22493,7 +22483,6 @@ payload:
   - '+.fjanlian.com'
   - '+.fjber.com'
   - '+.fjbgwl.com'
-  - '+.fjccdn.net'
   - '+.fjcesuo.com'
   - '+.fjcoop.com'
   - '+.fjcqjy.com'
@@ -22999,7 +22988,6 @@ payload:
   - '+.ftnormal00ab.com'
   - '+.ftnormal00ak.com'
   - '+.ftnormal01as.com'
-  - '+.ftoul.com'
   - '+.ftqq.com'
   - '+.ftrsit.com'
   - '+.ftsafe.com'
@@ -26047,6 +26035,7 @@ payload:
   - '+.haomeili.net'
   - '+.haomijie.com'
   - '+.haomingr.com'
+  - '+.haomm.xyz'
   - '+.haommn.com'
   - '+.haomove.com'
   - '+.haomugua.com'
@@ -26482,7 +26471,6 @@ payload:
   - '+.hcmiraefund.com'
   - '+.hcocoa.com'
   - '+.hcpzdm.com'
-  - '+.hcrjy.com'
   - '+.hcshebao.com'
   - '+.hcsilk.com'
   - '+.hcsindex.org'
@@ -28994,7 +28982,6 @@ payload:
   - '+.hzdx.com'
   - '+.hzecsemir.com'
   - '+.hzeg.com'
-  - '+.hzevkiauw.com'
   - '+.hzfangwang.com'
   - '+.hzfc.cc'
   - '+.hzfucai.net'
@@ -29874,7 +29861,6 @@ payload:
   - '+.ii.cc'
   - '+.ii010.com'
   - '+.ii090.com'
-  - '+.ii74.com'
   - '+.ii77.com'
   - '+.iiad.com'
   - '+.iianews.com'
@@ -30720,7 +30706,6 @@ payload:
   - '+.ishumei.com'
   - '+.ishuocha.com'
   - '+.ishuqi.com'
-  - '+.ishuse.com'
   - '+.isigu.com'
   - '+.isilicontech.com'
   - '+.isinosig.com'
@@ -30756,7 +30741,6 @@ payload:
   - '+.isp.cx'
   - '+.ispecial.xyz'
   - '+.ispservice.cc'
-  - '+.isqhy.com'
   - '+.isrcb.com'
   - '+.isscloud.com'
   - '+.issconline.com'
@@ -30948,6 +30932,7 @@ payload:
   - '+.itoutiaostatic.com'
   - '+.itouxian.com'
   - '+.itouzi.com'
+  - '+.itoyfx.com'
   - '+.itpaidui.com'
   - '+.itpeo.net'
   - '+.itpon.com'
@@ -32233,7 +32218,10 @@ payload:
   - '+.jinlishenghuo.com'
   - '+.jinliyu.cc'
   - '+.jinlong-jiaxiao.com'
+  - '+.jinmao88.com'
+  - '+.jinmaodigital.com'
   - '+.jinmaopartners.com'
+  - '+.jinmaozs.com'
   - '+.jinmenrc.com'
   - '+.jinmi.com'
   - '+.jinmogame.com'
@@ -32577,7 +32565,6 @@ payload:
   - '+.jjwxc.net'
   - '+.jjwxc.org'
   - '+.jjx88.net'
-  - '+.jjxj.org'
   - '+.jjxwzk.org'
   - '+.jjxyls.com'
   - '+.jjy118.com'
@@ -34465,7 +34452,6 @@ payload:
   - '+.km169.net'
   - '+.km18.net'
   - '+.km1818.com'
-  - '+.kmaa40.com'
   - '+.kmail.com'
   - '+.kmapp.net'
   - '+.kmcaishui.com'
@@ -34520,7 +34506,6 @@ payload:
   - '+.knoya.com'
   - '+.knsheng.com'
   - '+.knsyxw.com'
-  - '+.kny999.com'
   - '+.knzlcq.com'
   - '+.koal.com'
   - '+.koalacam.net'
@@ -35538,6 +35523,7 @@ payload:
   - '+.lawyermr.com'
   - '+.lawyershanghai.net'
   - '+.lawyersuperman.com'
+  - '+.laxiao.com'
   - '+.layabox.com'
   - '+.layui-inc.com'
   - '+.layui.com'
@@ -36608,7 +36594,6 @@ payload:
   - '+.littleswan.com'
   - '+.liu-kevin.com'
   - '+.liubaiapp.com'
-  - '+.liubangapp.com'
   - '+.liubiji.com'
   - '+.liubo.live'
   - '+.liucaijiu.com'
@@ -38269,6 +38254,7 @@ payload:
   - '+.masdiy.com'
   - '+.masdjy.com'
   - '+.masej.com'
+  - '+.mashang98.com'
   - '+.mashangmai.com'
   - '+.mashangshijie.com'
   - '+.mass-evo.com'
@@ -40491,7 +40477,6 @@ payload:
   - '+.naichabiao.com'
   - '+.naifei.pro'
   - '+.naigirl.com'
-  - '+.naikili.life'
   - '+.naimei.com'
   - '+.nainiuapp.com'
   - '+.naiping.net'
@@ -40757,7 +40742,6 @@ payload:
   - '+.neoremind.com'
   - '+.nepian.com'
   - '+.neptcn.com'
-  - '+.ner98.com'
   - '+.nercel.com'
   - '+.nerocn.com'
   - '+.nesbbs.com'
@@ -41720,6 +41704,7 @@ payload:
   - '+.odinliu.com'
   - '+.oealy.com'
   - '+.oeasy.org'
+  - '+.oec365.com'
   - '+.oecr.com'
   - '+.oeebee.com'
   - '+.oeeee.com'
@@ -43227,7 +43212,6 @@ payload:
   - '+.pites.cc'
   - '+.pitess.cc'
   - '+.piworker.com'
-  - '+.pix2code.net'
   - '+.pixelauth.com'
   - '+.pixhey.com'
   - '+.pixivacg.com'
@@ -43359,7 +43343,6 @@ payload:
   - '+.pmceo.com'
   - '+.pmdak.com'
   - '+.pmdaniu.com'
-  - '+.pmec.net'
   - '+.pmichina.org'
   - '+.pmish-tech.com'
   - '+.pmkiki.com'
@@ -43874,7 +43857,6 @@ payload:
   - '+.pyhead.com'
   - '+.pyjia.com'
   - '+.pyjsh.com'
-  - '+.pyk868.com'
   - '+.pyker.com'
   - '+.pylhotel.com'
   - '+.pylist.com'
@@ -46161,6 +46143,7 @@ payload:
   - '+.rosecmsc.com'
   - '+.rosedata.com'
   - '+.rosefinchfund.com'
+  - '+.rosi.me'
   - '+.rosinson.com'
   - '+.rossoarts.com'
   - '+.rossoarts.net'
@@ -46921,7 +46904,6 @@ payload:
   - '+.sd235.net'
   - '+.sd5g.com'
   - '+.sdailong.com'
-  - '+.sdaoyou.com'
   - '+.sdbao.com'
   - '+.sdbeta.com'
   - '+.sdbykqn.com'
@@ -51524,6 +51506,7 @@ payload:
   - '+.tencent.com.hk'
   - '+.tencent.com'
   - '+.tencentads.com'
+  - '+.tencentcdb.com'
   - '+.tencentclb.com'
   - '+.tencentcloud.com'
   - '+.tencentcloudapi.com'
@@ -52372,7 +52355,6 @@ payload:
   - '+.tongda2000.com'
   - '+.tongdaohui.com'
   - '+.tongdiaogs.com'
-  - '+.tongdoutown.com'
   - '+.tongdun.net'
   - '+.tongfangpc.com'
   - '+.tongfengqu.com'
@@ -52628,7 +52610,6 @@ payload:
   - '+.tpy10.net'
   - '+.tpy100.com'
   - '+.tpyboard.com'
-  - '+.tpyyes.com'
   - '+.tq163.com'
   - '+.tq321.com'
   - '+.tq520.net'
@@ -56268,7 +56249,6 @@ payload:
   - '+.whsir.com'
   - '+.whsladz.com'
   - '+.whsladz.net'
-  - '+.whsmkg.com'
   - '+.whsoftway.com'
   - '+.whsql.org'
   - '+.whsqsoft.com'
@@ -58088,7 +58068,6 @@ payload:
   - '+.xhqqt.com'
   - '+.xhscdn.com'
   - '+.xhsd.com'
-  - '+.xhsfw.com'
   - '+.xhslink.com'
   - '+.xhspx.com'
   - '+.xhswglobal.com'
@@ -58562,7 +58541,6 @@ payload:
   - '+.xiaoying.co'
   - '+.xiaoying.com'
   - '+.xiaoying.tv'
-  - '+.xiaoyiwo.net'
   - '+.xiaoyouxi100.com'
   - '+.xiaoyouxiqun.com'
   - '+.xiaoyouzb.net'
@@ -59145,6 +59123,8 @@ payload:
   - '+.xiunian.wang'
   - '+.xiuno.com'
   - '+.xiupin.com'
+  - '+.xiurenb.com'
+  - '+.xiurenji.net'
   - '+.xiushao.com'
   - '+.xiusheji.com'
   - '+.xiusheji.net'
@@ -59738,6 +59718,7 @@ payload:
   - '+.xuanxueyuan.com'
   - '+.xuanyangxl.com'
   - '+.xuanyouwang.com'
+  - '+.xuanyuanhuangdi.org'
   - '+.xuanyusong.com'
   - '+.xuanzhoubian.com'
   - '+.xubei.com'
@@ -62156,7 +62137,6 @@ payload:
   - '+.yphuifu.com'
   - '+.ypicw.com'
   - '+.ypjiameng.com'
-  - '+.ypk559.com'
   - '+.yplady.com'
   - '+.yplmzx.com'
   - '+.ypmob.com'
@@ -62773,6 +62753,7 @@ payload:
   - '+.yuntongxun.com'
   - '+.yuntouxiang.com'
   - '+.yuntu.io'
+  - '+.yuntu.ru'
   - '+.yunvm.com'
   - '+.yunvs.com'
   - '+.yunwei8.com'
@@ -62986,7 +62967,6 @@ payload:
   - '+.yxixy.com'
   - '+.yxjedu02.com'
   - '+.yxjia.com'
-  - '+.yxke12.com'
   - '+.yxkfw.com'
   - '+.yxkjlcd.com'
   - '+.yxlady.com'
@@ -65680,6 +65660,7 @@ payload:
   - '+.zwjk.com'
   - '+.zwjl.net'
   - '+.zwkf.net'
+  - '+.zwlhome.com'
   - '+.zwoptical.com'
   - '+.zwtianshangm.com'
   - '+.zwtkl8.com'
