--- a/directbak.yaml
+++ b/directbak.yaml
@@ -650,7 +650,6 @@ payload:
   - '+.0937js.com'
   - '+.0938net.com'
   - '+.093nd9.com'
-  - '+.09418.com'
   - '+.09451.com'
   - '+.094j35.com'
   - '+.095196555.com'
@@ -6530,6 +6529,7 @@ payload:
   - '+.8yw.xyz'
   - '+.8yzw.com'
   - '+.8z.net'
+  - '+.8zhuayu.cc'
   - '+.8zntx.com'
   - '+.8zy.com'
   - '+.9-zhuce.com'
@@ -8976,6 +8976,7 @@ payload:
   - '+.aoerdz.com'
   - '+.aoetech.com'
   - '+.aofenghuanjing.com'
+  - '+.aofenglu.com'
   - '+.aograph.com'
   - '+.aohuasports.com'
   - '+.aoidf3.com'
@@ -10357,6 +10358,7 @@ payload:
   - '+.bbdup.com'
   - '+.bbdzj.com'
   - '+.bbercn.com'
+  - '+.bbfoxgame.com'
   - '+.bbfstore.com'
   - '+.bbgsite.com'
   - '+.bbgstatic.com'
@@ -15300,6 +15302,7 @@ payload:
   - '+.cjkcgs.com'
   - '+.cjkhd.com'
   - '+.cjkj.ink'
+  - '+.cjkypo.com'
   - '+.cjkz.com'
   - '+.cjlap.com'
   - '+.cjlhs.com'
@@ -17510,7 +17513,6 @@ payload:
   - '+.dabaicai.com'
   - '+.dabaicai.org'
   - '+.dabaicai.shop'
-  - '+.dabangm.com'
   - '+.dabao123.com'
   - '+.dabaoku.com'
   - '+.dabieshu.com'
@@ -17828,6 +17830,7 @@ payload:
   - '+.daomengad.com'
   - '+.daonazhuce.com'
   - '+.daonchina.com'
+  - '+.daopub.com'
   - '+.daoqin.net'
   - '+.daoqm.com'
   - '+.daoscript.org'
@@ -18983,7 +18986,6 @@ payload:
   - '+.dlbljy.com'
   - '+.dlbyg.com'
   - '+.dlcaic.com'
-  - '+.dlcdnets.asus.com'
   - '+.dld.com'
   - '+.dld56.com'
   - '+.dldlsw.com'
@@ -21609,6 +21611,7 @@ payload:
   - '+.fa597.com'
   - '+.fa68.com'
   - '+.faakee.com'
+  - '+.faanw.com'
   - '+.fabang.com'
   - '+.fabao365.com'
   - '+.fabaofoundation.com'
@@ -30132,6 +30135,7 @@ payload:
   - '+.imgshangman.com'
   - '+.imgsina.com'
   - '+.imgtg.com'
+  - '+.imgtp.com'
   - '+.imgtu.com'
   - '+.imgu.cc'
   - '+.imgurl.org'
@@ -31483,6 +31487,7 @@ payload:
   - '+.jeanphy.online'
   - '+.jeanssalon.com'
   - '+.jeasyui.net'
+  - '+.jecvay.com'
   - '+.jedi-games.com'
   - '+.jedoo.com'
   - '+.jeebei.com'
@@ -32199,7 +32204,6 @@ payload:
   - '+.jinjingquan.com'
   - '+.jinju8.com'
   - '+.jinjunmei.net'
-  - '+.jinkagou.com'
   - '+.jinkan.org'
   - '+.jinke3d.com'
   - '+.jinkejoy.com'
@@ -32603,6 +32607,7 @@ payload:
   - '+.jkydt.com'
   - '+.jkyeo.com'
   - '+.jkys5.com'
+  - '+.jkzgr.net'
   - '+.jkzhilu.com'
   - '+.jkzl.com'
   - '+.jl0435.com'
@@ -33588,7 +33593,6 @@ payload:
   - '+.jz2005.com'
   - '+.jz51598.com'
   - '+.jz5u.com'
-  - '+.jz5u.net'
   - '+.jz6.com'
   - '+.jz6868.com'
   - '+.jz68888.com'
@@ -34299,7 +34303,6 @@ payload:
   - '+.kingsoft-office-service.com'
   - '+.kingsoft.com'
   - '+.kingsoft.net'
-  - '+.kingsoftstore.com'
   - '+.kingst.org'
   - '+.kingstarfintech.com'
   - '+.kingstarmedical.com'
@@ -34743,7 +34746,6 @@ payload:
   - '+.ktpf.cc'
   - '+.ktplay.com'
   - '+.ktsee.com'
-  - '+.kttpdq.com'
   - '+.ktvc8.com'
   - '+.ktvdaren.com'
   - '+.ktvme.com'
@@ -37754,7 +37756,6 @@ payload:
   - '+.lzcbnews.com'
   - '+.lzccb.com'
   - '+.lzcqt.com'
-  - '+.lzdxeuck.com'
   - '+.lzeweb.com'
   - '+.lzfcjys.com'
   - '+.lzfjq.com'
@@ -38405,7 +38406,6 @@ payload:
   - '+.mcjcjx.com'
   - '+.mcjd.net'
   - '+.mcmssc.com'
-  - '+.mcnqipdujs.com'
   - '+.mcooks.com'
   - '+.mcool.com'
   - '+.mcpemaster.com'
@@ -43210,7 +43210,6 @@ payload:
   - '+.piscesys.com'
   - '+.pisx.com'
   - '+.pites.cc'
-  - '+.pitess.cc'
   - '+.piworker.com'
   - '+.pixelauth.com'
   - '+.pixhey.com'
@@ -43243,6 +43242,7 @@ payload:
   - '+.pk361.com'
   - '+.pk532.com'
   - '+.pk571.com'
+  - '+.pk855.com'
   - '+.pk995.com'
   - '+.pkbeta.com'
   - '+.pkbff.com'
@@ -44478,6 +44478,7 @@ payload:
   - '+.qingdaonews.com'
   - '+.qingdaoren.com'
   - '+.qingdaoticai.com'
+  - '+.qingf001.com'
   - '+.qingfanqie.com'
   - '+.qingflow.com'
   - '+.qingfo.com'
@@ -46030,6 +46031,7 @@ payload:
   - '+.rmryun.com'
   - '+.rmsznet.com'
   - '+.rmttjkw.com'
+  - '+.rmtyun.com'
   - '+.rmxiongan.com'
   - '+.rmylsc.com'
   - '+.rmzs.net'
@@ -51734,7 +51736,6 @@ payload:
   - '+.thinkcmf.com'
   - '+.thinkdream.com'
   - '+.thinkeridea.com'
-  - '+.thinkhard.tech'
   - '+.thinkindrupal.com'
   - '+.thinkjs.org'
   - '+.thinksns.com'
@@ -56931,7 +56932,6 @@ payload:
   - '+.woshipm.com'
   - '+.woshiqian.com'
   - '+.woshizz.com'
-  - '+.woshuo123.com'
   - '+.wosign.com'
   - '+.wosigndoc.com'
   - '+.woskj2.com'
@@ -59807,6 +59807,7 @@ payload:
   - '+.xuewangshang.com'
   - '+.xuewangzhan.com'
   - '+.xuewangzhan.net'
+  - '+.xuewei360.com'
   - '+.xuexb.com'
   - '+.xuexi.la'
   - '+.xuexi1234567.com'
@@ -60338,6 +60339,7 @@ payload:
   - '+.yangqu.com'
   - '+.yangsam.com'
   - '+.yangshengliang.com'
+  - '+.yangshengpu.com'
   - '+.yangshengtt.com'
   - '+.yangshitianqi.com'
   - '+.yangtaiapp.com'
