--- a/directbak.yaml
+++ b/directbak.yaml
@@ -162,7 +162,6 @@ payload:
   - '+.022003.com'
   - '+.0221155.com'
   - '+.0222z6.com'
-  - '+.022china.com'
   - '+.022ee.com'
   - '+.022meishu.com'
   - '+.022s.com'
@@ -1885,7 +1884,6 @@ payload:
   - '+.1kapp.com'
   - '+.1ke.net'
   - '+.1kejian.com'
-  - '+.1kg.org'
   - '+.1kkk.com'
   - '+.1kmxc.com'
   - '+.1ksz.com'
@@ -2481,7 +2479,6 @@ payload:
   - '+.2baxb.me'
   - '+.2bkw.com'
   - '+.2broear.com'
-  - '+.2btu.com'
   - '+.2caipiao.com'
   - '+.2ccc.com'
   - '+.2chcn.com'
@@ -4958,7 +4955,6 @@ payload:
   - '+.590m.com'
   - '+.59120.com'
   - '+.591234x.com'
-  - '+.591522.com'
   - '+.59168.net'
   - '+.59178.com'
   - '+.5918dyw.com'
@@ -6255,6 +6251,7 @@ payload:
   - '+.8673h.com'
   - '+.867game.com'
   - '+.867wn.com'
+  - '+.8681.org'
   - '+.8682.cc'
   - '+.8684.com'
   - '+.868578.com'
@@ -8100,7 +8097,6 @@ payload:
   - '+.aimodou.net'
   - '+.aimoge.com'
   - '+.aimsen.com'
-  - '+.ainfiniteactivity.com'
   - '+.ainiapp.com'
   - '+.ainirobot.com'
   - '+.ainiseo.com'
@@ -11060,7 +11056,6 @@ payload:
   - '+.bio-fuyang.com'
   - '+.bio-review.com'
   - '+.bio360.net'
-  - '+.bioberi.com'
   - '+.biocloud.net'
   - '+.biocome.com'
   - '+.biodiscover.com'
@@ -11362,7 +11357,6 @@ payload:
   - '+.bjicjm.com'
   - '+.bjidc.net'
   - '+.bjidit.com'
-  - '+.bjinternet.com'
   - '+.bjipwqzx.com'
   - '+.bjiwex.com'
   - '+.bjjbsj.com'
@@ -12182,7 +12176,6 @@ payload:
   - '+.burl.cc'
   - '+.burnelltek.com'
   - '+.burongyi.com'
-  - '+.buroniworks.com'
   - '+.buruizi.com'
   - '+.bus365.com'
   - '+.bus84.com'
@@ -13092,7 +13085,6 @@ payload:
   - '+.cctongwen.com'
   - '+.cctpress.com'
   - '+.cctry.com'
-  - '+.cctuw.com'
   - '+.cctv-19.com'
   - '+.cctv-22.com'
   - '+.cctv-star.com'
@@ -15982,7 +15974,6 @@ payload:
   - '+.cnntt.com'
   - '+.cnnuo.com'
   - '+.cnobol.com'
-  - '+.cnodejs.org'
   - '+.cnoee.com'
   - '+.cnohd.com'
   - '+.cnoic.com'
@@ -16086,7 +16077,6 @@ payload:
   - '+.cnspeedtest.com'
   - '+.cnspeedtest.net'
   - '+.cnsphoto.com'
-  - '+.cnstea.com'
   - '+.cnstock.com'
   - '+.cnsun.cc'
   - '+.cnsun.net'
@@ -18165,6 +18155,7 @@ payload:
   - '+.dearprinter.com'
   - '+.deartree.com'
   - '+.deathearth.com'
+  - '+.deau-cable.com'
   - '+.debao.com'
   - '+.debo-info.com'
   - '+.debug.moe'
@@ -19509,6 +19500,7 @@ payload:
   - '+.dpcq1.net'
   - '+.dpcyjt.com'
   - '+.dper.com'
+  - '+.dpevmh.com'
   - '+.dpfile.com'
   - '+.dplor.com'
   - '+.dplord.com'
@@ -20417,7 +20409,6 @@ payload:
   - '+.echinatobacco.com'
   - '+.echo-isoftstone.com'
   - '+.echo188.com'
-  - '+.echomod.com'
   - '+.echoteen.com'
   - '+.echuandan.com'
   - '+.eciawards.org'
@@ -20760,7 +20751,6 @@ payload:
   - '+.eiisys.com'
   - '+.eilieili.cc'
   - '+.eimoney.com'
-  - '+.eindex.me'
   - '+.einkcn.com'
   - '+.eintone.com'
   - '+.eiot.com'
@@ -22297,7 +22287,6 @@ payload:
   - '+.fgvisa.net'
   - '+.fh1551.com'
   - '+.fh21static.com'
-  - '+.fh435.com'
   - '+.fh77.com'
   - '+.fh77.net'
   - '+.fh86.com'
@@ -22335,7 +22324,6 @@ payload:
   - '+.fiery-data.com'
   - '+.fifsky.com'
   - '+.figoc.pw'
-  - '+.fiiimg.com'
   - '+.fiinote.com'
   - '+.fiio.net'
   - '+.filcochina.com'
@@ -23567,7 +23555,6 @@ payload:
   - '+.gaussianoptics.com'
   - '+.gavindesign.com'
   - '+.gaxrmyy.com'
-  - '+.gay20.com'
   - '+.gaypan.cc'
   - '+.gbase8a.com'
   - '+.gbasebi.com'
@@ -24903,6 +24890,7 @@ payload:
   - '+.guanwangyun.com'
   - '+.guanwawa.com'
   - '+.guanxiaokai.com'
+  - '+.guanxxg.com'
   - '+.guanyiyun.com'
   - '+.guanzhongrc.com'
   - '+.guanzhu.mobi'
@@ -25254,7 +25242,6 @@ payload:
   - '+.gytsjk.com'
   - '+.gytsm.com'
   - '+.gyuancdn.com'
-  - '+.gywlwh.com'
   - '+.gywygl.com'
   - '+.gyxdkjdl.com'
   - '+.gyxuan.com'
@@ -26169,7 +26156,6 @@ payload:
   - '+.hasee.net'
   - '+.hashcloud.cz'
   - '+.hashcoding.net'
-  - '+.hashfish.net'
   - '+.hashnest.com'
   - '+.hasndq.com'
   - '+.hasoltd.com'
@@ -26456,6 +26442,7 @@ payload:
   - '+.hcxy6.com'
   - '+.hcyacg.com'
   - '+.hczc.com'
+  - '+.hczfgjj.com'
   - '+.hczhifu.com'
   - '+.hczxmr.com'
   - '+.hczypay.com'
@@ -27388,6 +27375,7 @@ payload:
   - '+.hnhaofang.com'
   - '+.hnhllv.net'
   - '+.hnhnled.com'
+  - '+.hnhxhz.com'
   - '+.hnhxxk.com'
   - '+.hniec.org'
   - '+.hniois.com'
@@ -27432,6 +27420,7 @@ payload:
   - '+.hnqfseed.com'
   - '+.hnquxing.com'
   - '+.hnquyou.com'
+  - '+.hnrcjob.com'
   - '+.hnrcsc.com'
   - '+.hnrcsc.net'
   - '+.hnrich.net'
@@ -28010,6 +27999,7 @@ payload:
   - '+.htmlplusplus.com'
   - '+.htmlsucai.com'
   - '+.htnice.com'
+  - '+.htpbc.com'
   - '+.htqyy.com'
   - '+.htranslate.com'
   - '+.htsc.com'
@@ -28057,7 +28047,6 @@ payload:
   - '+.huachenit.com'
   - '+.huachenyuanyang.com'
   - '+.huaci.cc'
-  - '+.huacnlee.com'
   - '+.huacolor.com'
   - '+.huada120.com'
   - '+.huadan.com'
@@ -28301,6 +28290,7 @@ payload:
   - '+.huayiwork.com'
   - '+.huayoumengze.com'
   - '+.huayoutianyu.com'
+  - '+.huayuanlaobao.com'
   - '+.huayuanlcd.com'
   - '+.huayuannongji.com'
   - '+.huayue119.com'
@@ -31528,7 +31518,6 @@ payload:
   - '+.jfyxmm.com'
   - '+.jfz.com'
   - '+.jfzhiyao.com'
-  - '+.jgaoxiao.com'
   - '+.jgcqgf.com'
   - '+.jgdq.org'
   - '+.jgdun.com'
@@ -31541,7 +31530,6 @@ payload:
   - '+.jgjsoft.com'
   - '+.jgscct.com'
   - '+.jgsdaily.com'
-  - '+.jgshwx.com'
   - '+.jgtc315.com'
   - '+.jguo.com'
   - '+.jgvnews.com'
@@ -32216,7 +32204,6 @@ payload:
   - '+.jinsedihao.com'
   - '+.jinsehuaqin.com'
   - '+.jinshakemei.com'
-  - '+.jinshangcaijing.com'
   - '+.jinshangdai.cc'
   - '+.jinshangdai.com'
   - '+.jinshanju.com'
@@ -32812,7 +32799,6 @@ payload:
   - '+.joymeng.com'
   - '+.joynb.net'
   - '+.joyncleon.com'
-  - '+.joyocean.org'
   - '+.joyohub.com'
   - '+.joyoung.com'
   - '+.joyowo.com'
@@ -33049,7 +33035,6 @@ payload:
   - '+.jsrcu.com'
   - '+.jsrrcb.com'
   - '+.jsrsrc.com'
-  - '+.jsrtzx.com'
   - '+.jsruiyin.com'
   - '+.jsrun.net'
   - '+.jsrun.pro'
@@ -33110,6 +33095,7 @@ payload:
   - '+.jt996.com'
   - '+.jtamc.com'
   - '+.jtbole.com'
+  - '+.jtbtech.com'
   - '+.jtggame.com'
   - '+.jtgzfw.com'
   - '+.jthailang.com'
@@ -33147,7 +33133,6 @@ payload:
   - '+.jucheng01.net'
   - '+.juchuangbio.com'
   - '+.judouapp.com'
-  - '+.juduo.cc'
   - '+.juduoping.com'
   - '+.jue.so'
   - '+.jue1.com'
@@ -37300,7 +37285,6 @@ payload:
   - '+.lthack.com'
   - '+.ltimg.net'
   - '+.ltkdj.com'
-  - '+.ltlovezh.com'
   - '+.ltmei.com'
   - '+.ltnic.com'
   - '+.ltp-cloud.com'
@@ -39396,6 +39380,7 @@ payload:
   - '+.mmbjq.com'
   - '+.mmbread.com'
   - '+.mmc-data.com'
+  - '+.mmcctuia2.com'
   - '+.mmcxu.com'
   - '+.mmfad.com'
   - '+.mmfang.cc'
@@ -39627,7 +39612,6 @@ payload:
   - '+.mokezhan.com'
   - '+.mokiee.com'
   - '+.moko.cc'
-  - '+.moks.cc'
   - '+.molbase.com'
   - '+.molbase.net'
   - '+.molegu.com'
@@ -40019,7 +40003,6 @@ payload:
   - '+.muse-ui.org'
   - '+.muselab-tech.com'
   - '+.mushafa.net'
-  - '+.mushapi.com'
   - '+.mushroomchina.com'
   - '+.music163.com'
   - '+.music4x.com'
@@ -40609,7 +40592,6 @@ payload:
   - '+.nbjzjn.com'
   - '+.nbkc-rp.com'
   - '+.nbmai.com'
-  - '+.nbmao.com'
   - '+.nbmedicalsystem.com'
   - '+.nboxnas.com'
   - '+.nbpolytheatre.com'
@@ -40666,7 +40648,6 @@ payload:
   - '+.nddaily.com'
   - '+.nddnrm.com'
   - '+.ndfsl.com'
-  - '+.ndh21.com'
   - '+.ndhys.com'
   - '+.ndmh.com'
   - '+.ndnslab.com'
@@ -42023,6 +42004,7 @@ payload:
   - '+.opensoce.com'
   - '+.openthos.com'
   - '+.openv.com'
+  - '+.openvsm.com'
   - '+.openwbs.com'
   - '+.openwrt.pro'
   - '+.openxiaoniu.com'
@@ -46333,6 +46315,7 @@ payload:
   - '+.runhuayou.biz'
   - '+.runidc.com'
   - '+.runjf.com'
+  - '+.runker.net'
   - '+.runker.online'
   - '+.runmang.com'
   - '+.runnar.com'
@@ -46404,6 +46387,7 @@ payload:
   - '+.rydth5.com'
   - '+.ryeex.com'
   - '+.ryjiaoyu.com'
+  - '+.ryjoin.com'
   - '+.rylinkworld.com'
   - '+.rymooc.com'
   - '+.rypeixun.com'
@@ -46827,7 +46811,6 @@ payload:
   - '+.scrdzf.com'
   - '+.scrmtech.com'
   - '+.scrsw.net'
-  - '+.scrtf.com'
   - '+.scrumcn.com'
   - '+.scscms.com'
   - '+.scsdns.com'
@@ -47279,7 +47262,6 @@ payload:
   - '+.sf024.com'
   - '+.sf6710.com'
   - '+.sfacg.com'
-  - '+.sfantree.com'
   - '+.sfb-100.com'
   - '+.sfbest.com'
   - '+.sfccn.com'
@@ -48542,7 +48524,6 @@ payload:
   - '+.sigu.me'
   - '+.siguoya.name'
   - '+.sigure.xyz'
-  - '+.sigvc.org'
   - '+.sihai-inc.com'
   - '+.sihaidj.com'
   - '+.sihaimg.com'
@@ -51213,7 +51194,6 @@ payload:
   - '+.taotieren.com'
   - '+.taotiwang.com'
   - '+.taotu8.net'
-  - '+.taotuwu.com'
   - '+.taou.com'
   - '+.taowola.com'
   - '+.taowopu.com'
@@ -51225,7 +51205,6 @@ payload:
   - '+.taoyeyou.com'
   - '+.taoyi-support.com'
   - '+.taoyizhu.com'
-  - '+.taoyoupin.com'
   - '+.taoyuantravel.com'
   - '+.taozaisheng.com'
   - '+.taozhutu.com'
@@ -51994,8 +51973,6 @@ payload:
   - '+.tijianzhuanjia.com'
   - '+.tikane.com'
   - '+.tikersport.com'
-  - '+.tikimg.cc'
-  - '+.tiklink.cc'
   - '+.tikuol.com'
   - '+.tillcn.com'
   - '+.tillglance.com'
@@ -52798,7 +52775,6 @@ payload:
   - '+.tsstorry.com'
   - '+.tstdtz.com'
   - '+.tstone.xyz'
-  - '+.tsw18.com'
   - '+.tswuby.com'
   - '+.tsxcx.xyz'
   - '+.tsybsmz.com'
@@ -52850,7 +52826,6 @@ payload:
   - '+.ttlsa.com'
   - '+.ttmark.com'
   - '+.ttmd5.com'
-  - '+.ttmeishi.com'
   - '+.ttmnq.com'
   - '+.ttmv.com'
   - '+.ttn8.com'
@@ -53959,6 +53934,7 @@ payload:
   - '+.ushaqi.com'
   - '+.ushendu.com'
   - '+.ushengame.com'
+  - '+.usidt.com'
   - '+.using.club'
   - '+.usingde.com'
   - '+.usingwin.com'
@@ -54052,7 +54028,6 @@ payload:
   - '+.uutuu.com'
   - '+.uuu9.com'
   - '+.uuudo.com'
-  - '+.uuukey.com'
   - '+.uuuo.com'
   - '+.uuutu.com'
   - '+.uuvisa.com'
@@ -54081,7 +54056,6 @@ payload:
   - '+.uwan.com'
   - '+.uwenku.com'
   - '+.uwexp.com'
-  - '+.uwin100.com'
   - '+.uworter.com'
   - '+.ux18.com'
   - '+.ux6.com'
@@ -54788,6 +54762,7 @@ payload:
   - '+.vvkaoyan.com'
   - '+.vvmeiju.com'
   - '+.vvo2o.com'
+  - '+.vvpingtai.com'
   - '+.vvpncdn.com'
   - '+.vvtor.com'
   - '+.vvup.net'
@@ -56070,6 +56045,7 @@ payload:
   - '+.whdayy.com'
   - '+.whdckj.com'
   - '+.whddgc.com'
+  - '+.whdhz.net'
   - '+.whdonde.com'
   - '+.whdqhj.com'
   - '+.whdrawing.com'
@@ -56182,6 +56158,7 @@ payload:
   - '+.whmeigao.com'
   - '+.whmj.org'
   - '+.whmlcy.net'
+  - '+.whmn.shop'
   - '+.whmnls.com'
   - '+.whmnrc.com'
   - '+.whmnx.com'
@@ -56530,7 +56507,6 @@ payload:
   - '+.wit5.com'
   - '+.witcp.com'
   - '+.with366.com'
-  - '+.withae.com'
   - '+.withcdn.com'
   - '+.withiocdn.com'
   - '+.withmedia.net'
@@ -57216,7 +57192,6 @@ payload:
   - '+.wuhanxingfuwan.com'
   - '+.wuhanxyz.com'
   - '+.wuhanzdq.com'
-  - '+.wuhanzhongye.com'
   - '+.wuhongsheng.com'
   - '+.wuhouhaodian.com'
   - '+.wuhu.cc'
@@ -57236,6 +57211,7 @@ payload:
   - '+.wujiit.com'
   - '+.wujinimg.com'
   - '+.wujinjixie.net'
+  - '+.wujinpp.com'
   - '+.wujixiaoshuo.com'
   - '+.wukong.com'
   - '+.wukong.la'
@@ -57514,7 +57490,6 @@ payload:
   - '+.wydns.com'
   - '+.wyduihua.com'
   - '+.wyh138.com'
-  - '+.wying360.com'
   - '+.wyins.net'
   - '+.wykefu.com'
   - '+.wykw.com'
@@ -58649,6 +58624,7 @@ payload:
   - '+.xigeweb.com'
   - '+.xigo.tv'
   - '+.xigua110.com'
+  - '+.xigua5.com'
   - '+.xiguabook.com'
   - '+.xiguaimg.com'
   - '+.xiguaji.com'
@@ -58813,6 +58789,7 @@ payload:
   - '+.xinguad.com'
   - '+.xingumin.net'
   - '+.xingxing.com'
+  - '+.xingxingjizhang.com'
   - '+.xingxingzu.com'
   - '+.xingye.work'
   - '+.xingyi.com'
@@ -59569,7 +59546,6 @@ payload:
   - '+.xshuoba.com'
   - '+.xshwp.com'
   - '+.xsina.net'
-  - '+.xsj2021888.com'
   - '+.xsjedu.org'
   - '+.xsjmc.net'
   - '+.xsjs-cifs.com'
@@ -60514,7 +60490,6 @@ payload:
   - '+.ycgj.cc'
   - '+.ycgjj.net'
   - '+.ycgslb.com'
-  - '+.ychefu.com'
   - '+.ychromedgeie.com'
   - '+.ychxie.com'
   - '+.ychxiex.com'
@@ -60607,6 +60582,7 @@ payload:
   - '+.yeai.com'
   - '+.yealink.com'
   - '+.yealinkvc.com'
+  - '+.yeambin.com'
   - '+.yeapcloud.com'
   - '+.yeapcloud.net'
   - '+.yearnfar.com'
@@ -61994,7 +61970,6 @@ payload:
   - '+.youxigu.com'
   - '+.youxiguancha.com'
   - '+.youxih.com'
-  - '+.youxihezi.net'
   - '+.youxihun.com'
   - '+.youxij.com'
   - '+.youxike.com'
@@ -62709,7 +62684,6 @@ payload:
   - '+.yunshouji123.com'
   - '+.yunshow.com'
   - '+.yunshuxie.com'
-  - '+.yunshuyuan.cc'
   - '+.yunsom.com'
   - '+.yunsong.com'
   - '+.yunstu.net'
@@ -63364,7 +63338,6 @@ payload:
   - '+.zdhaitao.com'
   - '+.zdhnayr.com'
   - '+.zdic.net'
-  - '+.zditect.com'
   - '+.zdkqyy.com'
   - '+.zdlife.com'
   - '+.zdlink.com'
@@ -64516,7 +64489,6 @@ payload:
   - '+.zhuimengzhu.com'
   - '+.zhuiqu.com'
   - '+.zhuishu.tw'
-  - '+.zhuishu5.com'
   - '+.zhuishubang.com'
   - '+.zhuishushenqi.com'
   - '+.zhuishuwang.com'
@@ -64656,7 +64628,6 @@ payload:
   - '+.zhyxcc.com'
   - '+.zhyymall.com'
   - '+.zhyyz.com'
-  - '+.zhzays.com'
   - '+.zhzjw.net'
   - '+.zhzyw.com'
   - '+.zhzyw.org'
